little changes lesson 2

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,2 +1,2 @@
-$body-font-family: 'Fira Sans';
-$heading-font-family: 'RocknRoll One';
+$body-font-family: 'Fira Sans', arial;
+$heading-font-family: 'RocknRoll One', arial;
