--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,2 +1,2 @@
-$body-font-family: 'Fira Sans', arial;
-$heading-font-family: 'RocknRoll One', arial;
+$body-font-family: 'Fira Sans', "Segoe UI";
+$heading-font-family: 'RocknRoll One', "Segoe UI";
